--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
-    "firebase": "^10.12.4",
+    "axios": "^1.7.3",
+    "firebase": "^10.12.5",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1",
+    "react-webcam": "^7.2.0"
   },
   "devDependencies": {
     "eslint": "^8",
